--- a/dev/index.html
+++ b/dev/index.html
@@ -4,48 +4,66 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-        <title>Arachne.ws Dev Suite</title>
+        <title>Arachne.ws Dev Suite</title> 
 
         <script>
-            const ws = new WebSocket("ws://localhost:8008");
-
-            ws.onopen = () => {
-                console.log("Connected to server");
-            }
-
-            ws.onmessage = (msg) => {
-                const recv = document.getElementById("recv");
-                const p = document.createElement("p");
-                p.innerText = msg.data;
-                recv.appendChild(p);
-                recv.scrollTop = recv.scrollHeight;
-            }
-
             document.addEventListener("DOMContentLoaded", () => {
                 const send = document.getElementById("send");
+                const recv = document.getElementById("recv");
+                const status = document.getElementById("status");
+
+                const ws = new WebSocket("ws://localhost:8008");
+                status.innerText = "connecting";
+
+                const oldConsoleLog = console.log;
+                console.log = (msg) => {
+                    const p = document.createElement("p");
+                    p.classList.add("break-all");
+                    const now = new Date();
+                    p.innerText = `[${now.getHours().toString().padStart(2, '0')}:${now.getMinutes().toString().padStart(2, '0')}:${now.getSeconds().toString().padStart(2, '0')}] ${msg}`;
+                    recv.appendChild(p);
+                    recv.scrollTop = recv.scrollHeight;
+
+                    oldConsoleLog(msg);
+                }
+
+                ws.onopen = () => {
+                    status.innerText = "connected";
+                    console.log("Connected to server.");
+                }
+
+                ws.onmessage = (msg) => {
+                    console.log(`recv: ${msg.data}`);
+                }
+            
                 send.addEventListener("submit", (e) => {
                     e.preventDefault();
                     const input = send.querySelector("input");
                     ws.send(input.value);
+                    console.log(`sent: ${input.value}`);
                     input.value = "";
                 });
             });
         </script>
 
     </head>
-    <body class="p-8">
+    <body>
         
-        <div class="bg-slate-900 px-5 py-6 flex flex-col gap-5 max-w-2xl mx-auto rounded-sm shadow-lg">
+        <div class="px-5 py-6 flex flex-col gap-5 max-w-2xl mx-auto h-[calc(100vh-4rem)] my-8">
+            <div class="flex gap-4">
+                <a href="https://arachne.ws" target="_blank" class="underline">arachne.ws</a>
+                <p>//</p>
+                <p>version: 0.1.0</p>
+                <p>//</p>
+                <p>status: <span id="status">disconnected</span></p>
+            </div>
             <div class="flex gap-3">
                 <form class="flex grow" id="send">
-                    <input type="text" required placeholder="message" class="bg-white px-3 py-1.5 grow rounded-l-sm">
-                    <button class="bg-emerald-600 text-white px-3 py-1.5 rounded-r-sm cursor-pointer">Send</button>
+                    <input type="text" required placeholder="message" class="border border-black border-r-0 bg-white px-3 py-1.5 grow rounded-l-sm">
+                    <button class="border border-black bg-black text-white px-5 py-1.5 rounded-r-sm cursor-pointer">Send</button>
                 </form>
-                <button class="bg-red-600 text-white px-3 py-1.5 rounded-sm cursor-pointer">Disconnect</button>
             </div>
-            <div id="recv" class="bg-white rounded-sm px-4 py-3 font-mono flex flex-col gap-1 overflow-auto h-96">
-
-            </div>
+            <div id="recv" class="border-t pt-5 pb-3 font-mono flex flex-col gap-1 overflow-auto min-h-96"></div>
         </div>
 
     </body>
